--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <title>Welcome</title>
 </head>
 <body>
+    TODO BUAT BUTTON INTERCEPT WIFI
     <div class="absolute z-40 bg-gray-50 justify-center">
         <div id="loading" class="w-screen h-screen">
             <div role="status">
