--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,11 @@
     <title>Welcome</title>
 </head>
 <body>
-    TODO BUAT BUTTON INTERCEPT WIFI
+    <div class="my-10 flex justify-center w-screen">
+        <a href="/traffic">
+            <button class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'> Scan Network Traffic</button>
+        </a>
+    </div>
     <div class="absolute z-40 bg-gray-50 justify-center">
         <div id="loading" class="w-screen h-screen">
             <div role="status">
@@ -242,7 +246,6 @@
     });
 
     function disconnect(ssid){
-        console.log(ssid)
         const requestBody = {
             ssid: ssid,
         }
