--- a/views/traffic.html
+++ b/views/traffic.html
@@ -38,6 +38,9 @@
             </div>
         </div>
     </div>
+    <div id="restext">
+
+    </div>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script>
@@ -86,7 +89,8 @@
             data: JSON.stringify(requestBody),
             contentType: 'application/json; charset=utf-8',
             success: function( data ){
-                console.log(data)
+                lines = "<p class='text-sm'>"+data+"</p>"
+                $('#restext').append(lines)
             },
             error: function( errorThrown ){
                 console.log(errorThrown)
@@ -94,6 +98,7 @@
             }
         });
     };
+
 
    function result(){
         $.ajax({
